Boton mas y menos
Se agrego cambio de color en el boton, cuando se realiza la transacción del +(mas) en color verde al el - (menos) en color rojo.

--- a/estilo/mas-menos.css
+++ b/estilo/mas-menos.css
@@ -162,6 +162,143 @@
 					margin-top:20%;
 					
 					}
+				.mas-menos-Vc{
+					
+					color:#FFF;
+					width: 80%;
+					height:80%;
+					margin-left: 20%;
+					border-radius:100%;
+					background-color:#366;
+					margin-top:20%;
+					
+					}
+				.mas-menos-Vf{
+					
+					color:#FFF;
+					width: 80%;
+					height:80%;
+					margin-left: 20%;
+					border-radius:100%;
+					background-color:#366;
+					margin-top:20%;
+					
+					}
+				.mas-menos-Fz{
+					
+					color:#FFF;
+					width: 80%;
+					height:80%;
+					margin-left: 20%;
+					border-radius:100%;
+					background-color:#366;
+					margin-top:20%;
+					
+					}
+				.mas-menos-Q{
+					
+					color:#FFF;
+					width: 80%;
+					height:80%;
+					margin-left: 20%;
+					border-radius:100%;
+					background-color:#366;
+					margin-top:20%;
+					
+					}
+				.mas-menos-B{
+					
+					color:#FFF;
+					width: 80%;
+					height:80%;
+					margin-left: 20%;
+					border-radius:100%;
+					background-color:#366;
+					margin-top:20%;
+					
+					}
+
+				.mas-menos-QsC{
+					
+					color:#FFF;
+					width: 80%;
+					height:80%;
+					margin-left: 20%;
+					border-radius:100%;
+					background-color:#366;
+					margin-top:20%;
+					
+					}
+				.mas-menos-QsNC{
+					
+					color:#FFF;
+					width: 80%;
+					height:80%;
+					margin-left: 20%;
+					border-radius:100%;
+					background-color:#366;
+					margin-top:20%;
+					
+					}
+				.mas-menos-hm{
+					
+					color:#FFF;
+					width: 80%;
+					height:80%;
+					margin-left: 20%;
+					border-radius:100%;
+					background-color:#366;
+					margin-top:20%;
+					
+					}
+				.mas-menos-H{
+					
+					color:#FFF;
+					width: 80%;
+					height:80%;
+					margin-left: 20%;
+					border-radius:100%;
+					background-color:#366;
+					margin-top:20%;
+					
+					}
+				.mas-menos-th{
+					
+					color:#FFF;
+					width: 80%;
+					height:80%;
+					margin-left: 20%;
+					border-radius:100%;
+					background-color:#366;
+					margin-top:20%;
+					
+					}
+				.mas-menos-Rmax{
+					
+					color:#FFF;
+					width: 80%;
+					height:80%;
+					margin-left: 20%;
+					border-radius:100%;
+					background-color:#366;
+					margin-top:20%;
+					
+					}
+				.mas-menos-Lc{
+					
+					color:#FFF;
+					width: 80%;
+					height:80%;
+					margin-left: 20%;
+					border-radius:100%;
+					background-color:#366;
+					margin-top:20%;
+					
+					}
+
+
+
+
 				.mas-menos-text{
 					font-size:25px;
 					position:absolute;
