--- a/estilo/tabla.css
+++ b/estilo/tabla.css
@@ -162,7 +162,7 @@ input{
 .topnav button{
 
   color: white;
-  padding: 5%;
+  padding: 4.5%;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -188,6 +188,13 @@ input{
 	}
 .H{
 	background-color:#EFF3F6;
+	}
+.volver{
+	background-color:darkgreen;
+
+	}
+.X{
+	background-color:darkred;
 	}
 
 
@@ -272,4 +279,65 @@ input{
 	} 
 	to{bottom:10%;
 	opacity:1}
+}
+
+
+
+
+
+
+/*Menu Seleccion Material segunda tabla*/
+
+.w3-overlay2{/*REVISAR*/
+	/*position:fixed;*/
+	display:none;
+	width:100%;
+	height:100%;
+	top:0;
+	left:0;
+	right:0;
+	bottom:0;
+	background-color:rgba(0,0,0,0.5);
+	z-index:2;
+	
+}
+
+.w3-sidebar2{
+	display:block;
+	height:98%; 
+	bottom: -10%;
+	width:100%;
+	background-color: rgba(51,51,51,1);
+	background-repeat: repeat;
+	position:fixed!important;
+	z-index:1;
+	color:#FFF;/*color del texto*/
+	text-decoration:none;
+
+
+}
+.mobile-container2 {
+  width: 100%;
+  background-color: #555;
+  height: 90%;
+  color: white;
+}
+
+
+/*Correccion en flecha doble*/
+.topnav1{
+	height: 12%;
+	
+}
+/*Correccion en flecha doble*/
+.topnav1 button{
+	height: 100%;
+	  color: white;
+	width: 13.5%;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  float: left;
 }
